BuddyAllocator dummy test has been appanded

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,6 @@ project(mobileum_ex_6 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(main src/main.c)
+add_executable(sample src/sample.c)
 add_executable(test_dlist src_test/test_DList.c)
+add_executable(test_buddy_allocator src_test/test_BuddyAllocator.c)
